crates/kreuzberg-ffi/include/kreuzberg.h

typedef struct KREUZBERGEmailExtractionResult KREUZBERGEmailExtractionResult;
typedef struct KREUZBERGExtractionConfig KREUZBERGExtractionConfig;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGTesseractConfig KREUZBERGTesseractConfig;
typedef struct KREUZBERGTextAnnotation KREUZBERGTextAnnotation;
typedef struct KREUZBERGTokenReductionConfig KREUZBERGTokenReductionConfig;
typedef struct KREUZBERGTreeSitterConfig KREUZBERGTreeSitterConfig;
typedef struct KREUZBERGTreeSitterProcessConfig KREUZBERGTreeSitterProcessConfig;
typedef struct KREUZBERGYakeParams KREUZBERGYakeParams;
char *kreuzberg_tree_sitter_config_to_json(const KREUZBERGTreeSitterConfig *ptr);
void kreuzberg_tree_sitter_config_free(KREUZBERGTreeSitterConfig *ptr);
char *kreuzberg_tree_sitter_process_config_to_json(const KREUZBERGTreeSitterProcessConfig *ptr);
void kreuzberg_tree_sitter_process_config_free(KREUZBERGTreeSitterProcessConfig *ptr);
char *kreuzberg_token_reduction_config_to_json(const KREUZBERGTokenReductionConfig *ptr);
char *kreuzberg_text_annotation_to_json(const KREUZBERGTextAnnotation *ptr);
void kreuzberg_text_annotation_free(KREUZBERGTextAnnotation *ptr);
char *kreuzberg_tesseract_config_to_json(const KREUZBERGTesseractConfig *ptr);
void kreuzberg_tesseract_config_free(KREUZBERGTesseractConfig *ptr);
char *kreuzberg_yake_params_to_json(const KREUZBERGYakeParams *ptr);
void kreuzberg_yake_params_free(KREUZBERGYakeParams *ptr);
char *kreuzberg_blake3_hash_bytes(const uint8_t *data,
                                  uintptr_t data_len);
char *kreuzberg_blake3_hash_file(const char *path);
uint64_t kreuzberg_fast_hash(const uint8_t *data,
                             uintptr_t data_len);
int32_t kreuzberg_validate_cache_key(const char *key);
int32_t kreuzberg_validate_port(uint16_t port);
int32_t kreuzberg_validate_host(const char *host);
int32_t kreuzberg_validate_cors_origin(const char *origin);
int32_t kreuzberg_validate_upload_size(uintptr_t size);
int32_t kreuzberg_validate_binarization_method(const char *method);
int32_t kreuzberg_validate_token_reduction_level(const char *level);
int32_t kreuzberg_validate_ocr_backend(const char *backend);
int32_t kreuzberg_validate_language_code(const char *code);
int32_t kreuzberg_validate_tesseract_psm(int32_t psm);
int32_t kreuzberg_validate_tesseract_oem(int32_t oem);
int32_t kreuzberg_validate_output_format(const char *format);
int32_t kreuzberg_validate_confidence(double confidence);
int32_t kreuzberg_validate_dpi(int32_t dpi);
int32_t kreuzberg_validate_chunking_params(uintptr_t max_chars,
                                           uintptr_t max_overlap);
int32_t kreuzberg_validate_llm_config_model(const char *model);
KREUZBERGExtractionResult *kreuzberg_extract_bytes(const uint8_t *content,
                                                   uintptr_t content_len,
                                                   const char *mime_type,
                                                   const KREUZBERGExtractionConfig *config);
KREUZBERGExtractionResult *kreuzberg_extract_file(const char *path,
                                                  const char *mime_type,
                                                  const KREUZBERGExtractionConfig *config);
KREUZBERGExtractionResult *kreuzberg_extract_file_sync(const char *path,
                                                       const char *mime_type,
                                                       const KREUZBERGExtractionConfig *config);
KREUZBERGExtractionResult *kreuzberg_extract_bytes_sync(const uint8_t *content,
                                                        uintptr_t content_len,
                                                        const char *mime_type,
                                                        const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_file_sync(const char *items,
                                        const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_bytes_sync(const char *items,
                                         const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_file(const char *items,
                                   const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_bytes(const char *items,
                                    const KREUZBERGExtractionConfig *config);
int32_t kreuzberg_is_valid_format_field(const char *field);
char *kreuzberg_validate_mime_type(const char *mime_type);
char *kreuzberg_detect_or_validate(const char *path,
                                   const char *mime_type);
char *kreuzberg_detect_mime_type_from_bytes(const uint8_t *content,
                                            uintptr_t content_len);
char *kreuzberg_get_extensions_for_mime(const char *mime_type);
char *kreuzberg_list_supported_formats(void);
int32_t kreuzberg_clear_processor_cache(void);
char *kreuzberg_transform_extraction_result_to_elements(const KREUZBERGExtractionResult *result);
KREUZBERGEmailExtractionResult *kreuzberg_extract_email_content(const uint8_t *data,
                                                                uintptr_t data_len,
                                                                const char *mime_type,
                                                                uint32_t fallback_codepage);
char *kreuzberg_cells_to_text(const char *cells);
char *kreuzberg_cells_to_markdown(const char *cells);
char *kreuzberg_djot_to_html(const char *djot_source);
char *kreuzberg_dedup_text(const char *texts);
char *kreuzberg_normalize_whitespace(const char *s);
int32_t kreuzberg_register_default_extractors(void);
int32_t kreuzberg_unregister_extractor(const char *name);
char *kreuzberg_list_extractors(void);