packages/csharp/src/Kreuzberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tesseract_config_to_json")]
    internal static extern IntPtr TesseractConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tesseract_config_free")]
    internal static extern void TesseractConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_text_annotation_to_json")]
    internal static extern IntPtr TextAnnotationToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_text_annotation_free")]
    internal static extern void TextAnnotationFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_token_reduction_config_to_json")]
    internal static extern IntPtr TokenReductionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_config_to_json")]
    internal static extern IntPtr TreeSitterConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_config_free")]
    internal static extern void TreeSitterConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_process_config_to_json")]
    internal static extern IntPtr TreeSitterProcessConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_process_config_free")]
    internal static extern void TreeSitterProcessConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_yake_params_to_json")]
    internal static extern IntPtr YakeParamsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_yake_params_free")]
    internal static extern void YakeParamsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_blake3_hash_bytes")]
    internal static extern IntPtr Blake3HashBytes(
        IntPtr data
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_blake3_hash_file")]
    internal static extern IntPtr Blake3HashFile(
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_fast_hash")]
    internal static extern ulong FastHash(
        IntPtr data
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_cache_key")]
    internal static extern int ValidateCacheKey(
        [MarshalAs(UnmanagedType.LPStr)] string key
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_port")]
    internal static extern void ValidatePort(
        ushort port
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_host")]
    internal static extern void ValidateHost(
        [MarshalAs(UnmanagedType.LPStr)] string host
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_cors_origin")]
    internal static extern void ValidateCorsOrigin(
        [MarshalAs(UnmanagedType.LPStr)] string origin
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_upload_size")]
    internal static extern void ValidateUploadSize(
        ulong size
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_binarization_method")]
    internal static extern void ValidateBinarizationMethod(
        [MarshalAs(UnmanagedType.LPStr)] string method
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_token_reduction_level")]
    internal static extern void ValidateTokenReductionLevel(
        [MarshalAs(UnmanagedType.LPStr)] string level
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_ocr_backend")]
    internal static extern void ValidateOcrBackend(
        [MarshalAs(UnmanagedType.LPStr)] string backend
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_language_code")]
    internal static extern void ValidateLanguageCode(
        [MarshalAs(UnmanagedType.LPStr)] string code
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_tesseract_psm")]
    internal static extern void ValidateTesseractPsm(
        int psm
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_tesseract_oem")]
    internal static extern void ValidateTesseractOem(
        int oem
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_output_format")]
    internal static extern void ValidateOutputFormat(
        [MarshalAs(UnmanagedType.LPStr)] string format
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_confidence")]
    internal static extern void ValidateConfidence(
        double confidence
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_dpi")]
    internal static extern void ValidateDpi(
        int dpi
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_chunking_params")]
    internal static extern void ValidateChunkingParams(
        ulong maxChars,
        ulong maxOverlap
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_llm_config_model")]
    internal static extern void ValidateLlmConfigModel(
        [MarshalAs(UnmanagedType.LPStr)] string model
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_bytes")]
    internal static extern IntPtr ExtractBytes(
        IntPtr content,
        [MarshalAs(UnmanagedType.LPStr)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_file")]
    internal static extern IntPtr ExtractFile(
        [MarshalAs(UnmanagedType.LPStr)] string path,
        [MarshalAs(UnmanagedType.LPStr)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_file_sync")]
    internal static extern IntPtr ExtractFileSync(
        [MarshalAs(UnmanagedType.LPStr)] string path,
        [MarshalAs(UnmanagedType.LPStr)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_bytes_sync")]
    internal static extern IntPtr ExtractBytesSync(
        IntPtr content,
        [MarshalAs(UnmanagedType.LPStr)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_file_sync")]
    internal static extern IntPtr BatchExtractFileSync(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_bytes_sync")]
    internal static extern IntPtr BatchExtractBytesSync(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_file")]
    internal static extern IntPtr BatchExtractFile(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_bytes")]
    internal static extern IntPtr BatchExtractBytes(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_is_valid_format_field")]
    internal static extern int IsValidFormatField(
        [MarshalAs(UnmanagedType.LPStr)] string field
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_mime_type")]
    internal static extern IntPtr ValidateMimeType(
        [MarshalAs(UnmanagedType.LPStr)] string mimeType
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_or_validate")]
    internal static extern IntPtr DetectOrValidate(
        [MarshalAs(UnmanagedType.LPStr)] string path,
        [MarshalAs(UnmanagedType.LPStr)] string mimeType
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_mime_type_from_bytes")]
    internal static extern IntPtr DetectMimeTypeFromBytes(
        IntPtr content
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_get_extensions_for_mime")]
    internal static extern IntPtr GetExtensionsForMime(
        [MarshalAs(UnmanagedType.LPStr)] string mimeType
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_supported_formats")]
    internal static extern IntPtr ListSupportedFormats();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_clear_processor_cache")]
    internal static extern void ClearProcessorCache();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_transform_extraction_result_to_elements")]
    internal static extern IntPtr TransformExtractionResultToElements(
        IntPtr result
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_email_content")]
    internal static extern IntPtr ExtractEmailContent(
        IntPtr data,
        [MarshalAs(UnmanagedType.LPStr)] string mimeType,
        uint fallbackCodepage
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_cells_to_text")]
    internal static extern IntPtr CellsToText(
        IntPtr cells
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_cells_to_markdown")]
    internal static extern IntPtr CellsToMarkdown(
        IntPtr cells
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_djot_to_html")]
    internal static extern IntPtr DjotToHtml(
        [MarshalAs(UnmanagedType.LPStr)] string djotSource
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_dedup_text")]
    internal static extern IntPtr DedupText(
        IntPtr texts
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_normalize_whitespace")]
    internal static extern IntPtr NormalizeWhitespace(
        [MarshalAs(UnmanagedType.LPStr)] string s
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_default_extractors")]
    internal static extern void RegisterDefaultExtractors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_extractor")]
    internal static extern void UnregisterExtractor(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_extractors")]
    internal static extern IntPtr ListExtractors();
